# greenring

./: .dockerignore  .env.e2e.example  .env.example  .env.local.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md
deploy/: Caddyfile  docker-compose.local.yml  docker-compose.yml
migrations/: 0001_initial.sql  0002_add_user_avatar_key.sql
scripts/: bootstrap-owner.sh  e2e-cleanup.sh  e2e-prepare.sh  local-services.sh  run-e2e.sh  run-local-api.sh  run-local-web.sh
src/: app.rs  auth.rs  avatars.rs  config.rs  db.rs  error.rs  livekit.rs  main.rs  state.rs
src/models/: api.rs  db.rs
src/routes/: auth.rs  invites.rs  mod.rs  parties.rs  presence.rs  realtime.rs
web/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/public/gamerpics/xbox-360-dashboard/: manifest.json
web/src/: App.tsx  party-session.tsx  styles.css
web/src/components/: PartyTextChat.tsx  ShellLayout.tsx  UserAvatar.tsx  UserIdentity.tsx
web/src/hooks/: usePresenceActivity.ts  useRealtime.ts
web/src/lib/: api.ts  chatCommands.ts  gamerpics.ts  home-state.ts  types.ts
web/src/routes/: HomePage.tsx  LoginPage.tsx  PartyPage.tsx  RedeemInvitePage.tsx  SettingsPage.tsx
web/tests/: smoke.spec.ts
