[package]
name = "xbox-party-chat"
version = "0.1.0"
edition = "2024"
description = "Prototype Rust application for Xbox party chat tooling"
publish = false

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
dotenvy = "0.15.7"
livekit-api = { version = "0.4.16", default-features = false, features = ["access-token"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
